--- a/07-函数的扩展/01-函数参数与结构赋值一起使用.html
+++ b/07-函数的扩展/01-函数参数与结构赋值一起使用.html
@@ -9,6 +9,23 @@
 <link href="" rel="stylesheet">
 </head>
 <body>
-    
+    <script>
+    	//参数默认值可以与解构赋值的默认值，结合起来使用。
+    	function foo({x, y = 5}) {
+    	  console.log(x, y);
+    	}
+
+    	foo({}) // undefined 5
+    	foo({x: 1}) // 1 5
+    	foo({x: 1, y: 2}) // 1 2
+    	foo() // TypeError: Cannot read property 'x' of undefined
+
+    	//函数foo调用时没提供参数，变量x和y就不会生成，从而报错。通过提供函数参数的默认值，就可以避免这种情况。
+    	function foo({x, y = 5} = {}) {
+    	  console.log(x, y);
+    	}
+
+    	foo() // undefined 5
+    </script>
 </body>
 </html>
