--- a/globalDemo.html
+++ b/globalDemo.html
@@ -7,16 +7,18 @@
 <body>
 
 <script>
-var str="Hello world! HelloHello";
-//查找"Hello"
-var patt=/Hello/g;
-var result=patt.exec(str);
-console.log(result);
-document.write("返回值: " +  result); 
-//查找 "RUNOOB"
-patt=/RUNOOB/g;
-result=patt.exec(str);
-document.write("<br>返回值: " +  result);
+	function add(...values) {
+	  let sum = 0;
+
+	  for (var val of values) {
+	    sum += val;
+	     console.log(val);
+	  }
+
+	  return sum;
+	}
+
+	add(2, 5, 3) ;
 </script>
 	
 </body>
